add link back to code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="row" id='nbodyHeader'>
   	<div class="col-xs-5 col-xs-offset-1">
-      <h1><i> N-Body Simulator</i></h1><a href="http://mcnuttandrew.github.io/#/work">(back to home page)</a>
+      <h1><i> N-Body Simulator</i></h1><a href="http://mcnuttandrew.github.io/#/work">(back to home page)</a><a href="https://github.com/mcnuttandrew/n-body-simulator">(code)</a>
     </div>
   </div>
   <div class="row">
